apps/vaultwarden/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.ramoneees.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: wildcard-ramoneees-com-tls
